# bid-tool-v2

./: .coverage  .env.example  .gitignore  CLAUDE.md  pyproject.toml  v2-design.md
.github/state/: notified_ids.json
.github/workflows/: fetch.yml
docs/: 2026-03-25_おーしまさん_transcript.md  2026-04-03_おーしまさん.md
src/: config.py  main.py  web.py
src/core/: categorizer.py  dedup.py  enricher.py  extractor.py  filter.py  matcher.py  models.py  notifier.py  scorer.py  summarizer.py  url_checker.py  writer.py
src/sources/: etokyo.py  kkj.py  pportal.py
tests/: test_categorizer.py  test_category_groups.py  test_eligibility_conditions.py  test_enricher.py  test_etokyo.py  test_etokyo_integration.py  test_extractor.py  test_filter.py  test_kkj.py  test_kkj_integration.py  test_main.py  test_matcher.py  test_notifier.py  test_pportal.py  test_spec_url.py  test_summarizer.py  test_url_checker.py  test_web_deadline.py  test_web_mobile.py  test_web_new_badge.py  test_writer.py
tests/fixtures/: etokyo_search_result.html  kkj_response.xml
